- Adds mvcc logic to transactions. - TO DO: Checkpoint Logic - TO DO: Read Committed, Repeatable Read, Serializable Concurrency Levels